# rss-aggregator-lite

./: .gitignore  Cargo.toml  diesel.toml  flake.nix
.github/workflows/: rust.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20250514_154948_create_category_table.rs  m20250514_161012_create_enclosure_table.rs  m20250514_161015_create_item_table.rs
migrations/2025-04-29-163816_create_category/: up.sql
migrations/2025-04-29-163833_create_enclosure/: down.sql  up.sql
migrations/2025-04-29-164905_create_item_category/: down.sql  up.sql
migrations/2025-04-29-165926_create_item/: up.sql
settings/: settings.toml
src/: lib.rs  main.rs  models.rs  other_stuff.rs  schema.rs
src/entities/: category.rs  enclosure.rs  item.rs  mod.rs  prelude.rs
src/models/: category.rs  enclosure.rs  item.rs  item_category.rs  mod.rs
