[package]
name = "rss-aggregator-lite"
version = "0.1.0"
edition = "2024"

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
rss = "2.0.12"
reqwest = "0.12.15"
openssl = { version = "0.10", features = ["vendored"] }
url = "2.5.4"
regex = "1.11.1"
toml = "0.8.20"
serde = "1.0.219"
serde_derive = "1.0.219"
infer = "0.19.0"
