[package]
name = "rss-aggregator-lite"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "bin"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.44.2", features = ["full"] }

rss = "2.0.12"
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
] }
# openssl = { version = "0.10", features = ["vendored"] }
url = "2.5.4"
regex = "1.11.1"
toml = "0.8.20"
serde = "1.0.219"
serde_derive = "1.0.219"
infer = "0.19.0"
futures = "0.3.28"

sea-orm = { version = "^0.12.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",

] }

sea-orm-migration = "^0.12.0"


dotenvy = "0.15"
anyhow = "1.0.98"
log = "0.4.20"
env_logger = "0.11.3"
serde_json = "1.0.140"
